--- a/Act_2_4_1/app/src/main/res/layout/activity_main.xml
+++ b/Act_2_4_1/app/src/main/res/layout/activity_main.xml
@@ -47,16 +47,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />
 
-    <Switch
-        android:id="@+id/zuluSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="158dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="165dp"
-        android:text="Zulu"
+    <Spinner
+        android:id="@+id/languageSpinner"
+        android:layout_width="162dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="124dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
