--- a/3_1_1_arc/app/src/main/res/layout/activity_main.xml
+++ b/3_1_1_arc/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="110dp"
-        android:layout_marginTop="285dp"
+        android:layout_marginTop="104dp"
         android:layout_marginEnd="91dp"
         android:ems="10"
         android:inputType="numberSigned"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
