--- a/4_1_1_arc/app/src/main/res/layout/activity_main.xml
+++ b/4_1_1_arc/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <TextView
+        android:id="@+id/resultOutput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="172dp"
+        android:layout_marginEnd="177dp"
+        android:text="Enter a number"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="18sp"
+        android:typeface="monospace"
+        android:textColor="#000000" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
