--- a/4_2_mm/app/src/main/res/layout/activity_multiplication_table.xml
+++ b/4_2_mm/app/src/main/res/layout/activity_multiplication_table.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MultiplicationTable">
 
+    <TextView
+        android:id="@+id/multiplicationTableTextView"
+        android:layout_width="293dp"
+        android:layout_height="448dp"
+        android:layout_marginStart="174dp"
+        android:layout_marginTop="116dp"
+        android:layout_marginEnd="179dp"
+        android:text="abc"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
